--- a/frontendcif/src/pages/SearchPage.css
+++ b/frontendcif/src/pages/SearchPage.css
@@ -16,6 +16,7 @@
   margin: 20px;
   position: sticky;
   top: 4rem;
+  color: black;
 }
 
 #profile-card-list {
